# soundbox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/soundbox/: __init__.py  __main__.py  cli.py  presets.py  sources.py  spotify_backend.py  ytdlp_backend.py
tests/: test_presets.py  test_sources.py  test_ytdlp_backend.py
